Fix overflow for autoscale dialog

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -2868,8 +2868,6 @@ Dialogs*/
   border-radius: 10px 10px 10px 10px;
 }
 
-
-
 .ui-dialog .ui-widget-content .nothing-to-select p {
   margin: 18px 0 0;
 }
@@ -6735,7 +6733,6 @@ div.panel.ui-dialog div.list-view div.fixed-header {
   height: 23px;
 }
 
-
 .multi-edit-add-list .ui-button.cancel {
   /*+placement:shift 492px -18px;*/
   position: relative;
@@ -9252,91 +9249,81 @@ div.panel.ui-dialog div.list-view div.fixed-header {
   overflow: auto;
 }
 
-
 /*Autoscaler*/
-.ui-dialog div.autoscaler div.form-container div.form-item[rel=templateCategory] {
+.ui-dialog div.autoscaler {
+  overflow: auto;
+  max-height: 600px;
+}
 
-    display: block;
-    width: 345px;
-    float:left;
+.ui-dialog div.autoscaler div.form-container div.form-item[rel=templateCategory] {
+  display: block;
+  width: 345px;
+  float: left;
 }
 
 .ui-dialog div.autoscaler div.form-container div.form-item[rel=templateNames] {
- 
-    display: inline-block;
-    width: 330px;
-    float:left;
-    position:relative;    
-    margin-top: -3px;
+  display: inline-block;
+  width: 330px;
+  float: left;
+  position: relative;
+  margin-top: -3px;
 }
 
 .ui-dialog div.autoscaler div.form-container div.form-item[rel=securityGroups] {
-
-    display: block;
-    width: 370px;
-    float:left;
+  display: block;
+  width: 370px;
+  float: left;
 }
 
 .ui-dialog div.autoscaler div.form-container div.form-item[rel=DiskOfferings] {
-
-    display: inline-block;
-    width: 370px;
-    float:left;
-    position:relative;
-    margin-top: 1px;
+  display: inline-block;
+  width: 370px;
+  float: left;
+  position: relative;
+  margin-top: 1px;
 }
 
-
-
 .ui-dialog div.autoscaler div.form-container div.form-item[rel=minInstance] {
-
-    display: block;
-    width: 50%;
-    float:left;
+  display: block;
+  width: 50%;
+  float: left;
 }
 
 .ui-dialog div.autoscaler div.form-container div.form-item[rel=maxInstance] {
-
-    display: inline-block;
-    width: 50%;
-    float:left;
-    left:-30px;
-    position:relative;
+  display: inline-block;
+  width: 50%;
+  float: left;
+  left: -30px;
+  position: relative;
 }
 
-
 .ui-dialog div.autoscaler div.form-container div.form-item[rel=interval] {
-
-    display: block;
-    width: 50%;
-    float:left;
+  display: block;
+  width: 50%;
+  float: left;
 }
 
 .ui-dialog div.autoscaler div.form-container div.form-item[rel=quietTime] {
-
-    display: inline-block;
-    width: 50%;
-    float:left;
-    left:-15px;
-    position:relative;
+  display: inline-block;
+  width: 50%;
+  float: left;
+  left: -15px;
+  position: relative;
 }
 
 .ui-dialog div.autoscaler div.form-container div.form-item[rel=snmpCommunity] {
-
-    display: block;
-    width: 50%;
-    float:left;
+  display: block;
+  width: 50%;
+  float: left;
 }
 
 .ui-dialog div.autoscaler div.form-container div.form-item[rel=snmpPort] {
-
-    display: inline-block;
-    width: 50%;
-    float:left;
-    left:-15px;
-    position:relative;
+  display: inline-block;
+  width: 50%;
+  float: left;
+  left: -15px;
+  position: relative;
 }
-
 
 .ui-dialog div.autoscaler div.form-container div.value select {
   width: 88%;
@@ -9344,46 +9331,36 @@ div.panel.ui-dialog div.list-view div.fixed-header {
 }
 
 div.ui-dialog div.autoscaler div.scale-up-policy div.multi-edit {
-
-margin-top:0px;
-
+  margin-top: 0px;
 }
 
 div.ui-dialog div.autoscaler div.scale-down-policy div.multi-edit {
-
-margin-top:0px;
-
+  margin-top: 0px;
 }
 
-
 div.ui-dialog div.autoscaler div.scale-up-policy-title {
-
-    color: #0055BB;
-    margin-left: -650px;
-    margin-top: 40px;
+  color: #0055BB;
+  margin-left: -650px;
+  margin-top: 40px;
 }
 
 div.ui-dialog div.autoscaler div.scale-up-policy-title label {
-
-    font-size: 13px;
-    margin-left: 170px;
-    margin-right: 10px;
+  font-size: 13px;
+  margin-left: 170px;
+  margin-right: 10px;
 }
 
 div.ui-dialog div.autoscaler div.scale-down-policy-title label {
-
-    font-size: 13px;
-    margin-left: 170px;
-    margin-right: 10px;
+  font-size: 13px;
+  margin-left: 170px;
+  margin-right: 10px;
 }
 
 div.ui-dialog div.autoscaler div.scale-down-policy-title {
-
-    color: #0055BB;
-    margin-left: -650px;
-    margin-top: 10px;
+  color: #0055BB;
+  margin-left: -650px;
+  margin-top: 10px;
 }
-
 
 /*Action icons*/
 .action.edit .icon {
